@@ -1,5 +1,8 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+== 01/03/2014 ==
+demonstar55: Crash prevention for emote.
+
 == 01/02/2014 ==
 demonstar55: Stuns from beneficial spells (Harvest) ignore immunity
 
